<resources>
    <string name="app_name">MyApp</string>
    <string name="enter">Enter</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="typeYourAnswer">Type your answer here</string>
    <string name="next">Next</string>
    <string name="hint">Hint</string>
    <string name="hintBar">Hint Bar</string>
    <string name="revealAnswer">Reveal</string>
    <string name="startButton">Start</string>
    <string name="randomTriviaButton">Random Trivia</string>
    <string name="historyButton">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="randomTriviaCD">random trivia image button</string>
    <string name="iv_categoryContentDescription">background</string>
    <string name="tv_categoryText">Category Name</string>
    <string name="menuButton">Menu</string>
    <string name="sample_paragraph">This is a sample paragraph. Blah blah blah!</string>
    <string name="sample_question">This is a question.</string>
    <string name="paragraph_instructions">Read the paragraph. Then answer the question.</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="temporary_correct">Correct!</string>
    <string name="temp_end_of_exercise">You completed the exercise with a score of:</string>
    <string name="temp_score">4 / 5</string>
    <string name="proceed_message">Begin the next exercise?</string>
</resources>